<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="naavigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scheduled"
            android:icon="@drawable/ic_schedule_grey_24dp"
            android:title="Order" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_gray_24dp"
            android:title="History" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black"
            android:title="@string/logout" />
    </group>
</menu>
