<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Fragment.settings_fragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/apstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/menu_profile"
            android:textColor="@color/colorRed"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/d1"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <LinearLayout
            android:id="@+id/name_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorStroke" />

            <TextView
                android:id="@+id/name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="textPersonName"
                android:text="@string/hasan_algoharey"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="406dp"
            android:layout_height="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_lay" />

        <LinearLayout
            android:id="@+id/mail_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_lay"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textColor="@color/colorStroke" />

            <TextView
                android:id="@+id/mail_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="textEmailAddress"
                android:text="@string/hassanalgoharey_gmail_com"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_lay" />

        <LinearLayout
            android:id="@+id/phone_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_lay"
            app:layout_constraintTop_toBottomOf="@+id/divider4">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/colorStroke" />

            <TextView
                android:id="@+id/phone_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="text"
                android:text="@string/_01025942627"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_lay" />

        <LinearLayout
            android:id="@+id/pass_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mail_lay"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorStroke" />

            <TextView
                android:id="@+id/pass_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="textPassword"
                android:text="@string/action_settings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <View
            android:id="@+id/d2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_lay" />

        <LinearLayout
            android:id="@+id/pass_llay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/mail_lay"
            app:layout_constraintTop_toBottomOf="@+id/pass_lay">

            <Button
                android:id="@+id/D_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_account_circle_black_24dp"
                android:text="@string/driver_s_image"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/T_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_menu_camera"
                android:text="@string/truck_image"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/TL_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_menu_camera"
                android:text="@string/truck_license_image"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/DL_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_menu_camera"
                android:text="@string/driver_s_license_image"
                android:textAllCaps="false" />

        </LinearLayout>

        <View
            android:id="@+id/kd2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_llay" />

        <Button
            android:id="@+id/about_but"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/colorPrimaryDark"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/open_our_page"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kd2" />

        <View
            android:id="@+id/d4"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_but" />

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/colorRed"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/sign_out"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d4" />

        <View
            android:id="@+id/d5"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="@color/colorCardViewBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout" />

        <TextView
            android:id="@+id/terms_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/app_version_1_0_0"
            android:textColor="@color/colorStroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>